# horns

./: Cargo.toml  example.json
src/: example.json  main.rs  todos.rs
src/args/: Packages.toml  json_and_config.rs  json_to_array.rs  mod.rs  packageConfig.rs  terminal.rs
src/args/pm/: flatpak.rs  mod.rs
src/modules/: install.rs  script.rs
src/restore/: check.rs  mod.rs  restore_file.rs  session.rs
