[package]
name = "rhino-horns"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4.41"
toml = "0.8"